# sushi-bunny

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt
src/: main.py  models.py  schemas.py  utils.py
src/static/: mesa.css  resume.css  styles.css  tables.css
src/templates/: index.html  mesa.html  navbar.html  resume.html  tables.html
