[project]
name = "sushi-bunny"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
dependencies = [
    "fastapi[standard]==0.115.14",
    "jinja2==3.1.6",
    "psycopg2-binary==2.9.10",
    "sqlalchemy==2.0.41",
    "websockets==15.0.1",
]
